<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.AddCourse">

    <ImageButton
        android:id="@+id/BackButtonAddCourse"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/abc_vector_test"
        android:contentDescription="@string/backButtonDescription"
        android:background="#A8C6FA"
        android:fontFamily="@font/bevietnam_regular"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addCourseLabel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#75a9f9"
        android:fontFamily="@font/bevietnam_regular"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/addCourseLabel"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BackButtonAddCourse"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addCourseText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/bevietnam_regular"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/addCourseText"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseLabel" />

    <EditText
        android:id="@+id/addCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:textSize="26sp"
        android:fontFamily="@font/bevietnam_regular"
        android:hint="@string/namePlaceholder"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseText"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/SaveButtonAddCourse"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#A8C6FA"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/saveButtonText"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseName"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>