<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_courses_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.CoursesList">

    <ImageButton
        android:id="@+id/BackButtonCoursesList"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/abc_vector_test"
        android:contentDescription="@string/backButtonDescription"
        android:background="#A8C6FA"
        android:fontFamily="@font/bevietnam_regular"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coursesLabel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#75a9f9"
        android:fontFamily="@font/bevietnam_regular"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/coursesLabel"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BackButtonCoursesList"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/coursesListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/AddCourseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesLabel" />

    <Button
        android:id="@+id/AddCourseButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#A8C6FA"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/addButtonText"
        android:textColor="#FFFFFF"
        android:textSize="24sp"

        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>